edit label phone to Phone/Whatsapp

--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
                         <input type="text" placeholder="Your full name here" required>
                     </div>
                     <div class="card-box">
-                        <label for="phone" class="details">Phone</label>
-                        <input type="text" placeholder="Your phone here " required>
+                        <label for="phone" class="details">Phone/Whatsapp</label>
+                        <input type="text" placeholder="Your number here " required>
                     </div>
                 </div>
 
