testing:adding header

--- a/new.html
+++ b/new.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://www.kabadixpress.com/assets/designer/themes/default/css/conditional_sh.css">
 </head>
 <body>
+    <header>
+        <h1>Om Scrap</h1>
+    </header>
     <!-- How It Works -->
         <section class="hw_wrks_sect poppins" id="howworks">
             <div class="container">
