testing: second time updating header with h1 tag

--- a/new.html
+++ b/new.html
@@ -10,6 +10,8 @@
 <body>
     <header>
         <h1>Om Scrap</h1>
+        <h1>Om Scrap</h1>
+        
     </header>
     <!-- How It Works -->
         <section class="hw_wrks_sect poppins" id="howworks">
