testing: third time updating header with h1 tag

--- a/new.html
+++ b/new.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Om Scrap</h1>
         <h1>Om Scrap</h1>
+        <h1>Om Scrap</h1>
         
     </header>
     <!-- How It Works -->
