--- a/Extra.html
+++ b/Extra.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
     
 <body>
+    <header>
+        <a href="#" >
+            <img src="img/logoFinal-2.png" width="100px" height="100px" alt="mylogo">
+        </a>
+        <nav>
+            <ul id="navbar">
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="ratelist.html">Rate List</a></li>
+                <li><a href="pickuprequest.html">Pickup Request</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contactus.html">Contant Us</a></li>
+                <li><a href="#"><i class="fa-solid fa-phone">&nbsp;+91-7210731073</i></a></li>
+            </ul>
+        </nav>
+    </header>
 <!--     
     <header>
         <a href="#" >
