working on footer

--- a/home.html
+++ b/home.html
@@ -92,35 +92,100 @@
     <section class="how-we-works">
         <div class="container">
             <div class="row">
-                <div class="col-12 all-heading">
-                    <h2>How we works</h2>
+                <div class="col-12">
+                    <h2 class="heading">How we works</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-4 centerdiv">
-                    <div class="cardbox">
+                <div class="col-12">
+                    <p style="text-align: center;">How It Works content will display here.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-4 hover-box">
+                    <div class="hww-box">
                         <img src="image/hww-1.png" alt="">
-                        <p>Book a pickup slot</p>
+                        <h4>Book a Pickup</h4>
+                        <p>From our Website.</p>
                     </div>
                 </div>
-                <div class="col-4 centerdiv">
-                    <div class="cardbox">
+                <div class="col-4 hover-box">
+                    <div class="hww-box">
                         <img src="image/hww-2.png" alt="">
-                        <p>Visit & Inspection</p>
+                        <h4>Visit & Inspection</h4>
+                        <p>Executive will reach at your doorstep on date and time designated by you.</p>
                     </div>
                 </div>
-                <div class="col-4 centerdiv">
-                    <div class="cardbox">
+                <div class="col-4 hover-box">
+                    <div class="hww-box">
                         <img src="image/hww-3.png" alt="">
-                        <p>Get Money</p>
+                        <h4>Get Money</h4>
+                        <p>Get paid with multiple payment.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
     <!-------------------------------------- End How we works------------------------------ -->
     
     <!-------------------------------------- Start Why OmScrap?------------------------------ -->
+    <section class="why-we">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="heading-all">Why we ?</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <p style="text-align: center;padding-bottom: 10px;">Smart & Simple web based solution for all type of Scrap.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-3">
+                    <div class="ww-box">
+                        <div class="img-box">
+                            <img src="image/ww-0-1.png" alt="">
+                        </div>
+                        <div class="img-footer">
+                            <p>Free Pick Up</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="ww-box">
+                        <div class="img-box">
+                            <img src="image/ww-0-1 (1).png" alt="">
+                        </div>
+                        <div class="img-footer">
+                            <p>Digital Weight Scale</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="ww-box">
+                        <div class="img-box">
+                            <img src="image/ww-0-1.png" alt="">
+                        </div>
+                        <div class="img-footer">
+                            <p>Multiple Payment Options</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="ww-box">
+                        <div class="img-box">
+                            <img src="image/ww-0-1.png" alt="">
+                        </div>
+                        <div class="img-footer">
+                            <p>Contribution in Swatchh Bharat Abhiyan</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-------------------------------------- End Why OmScrap?------------------------------ -->
 
     <!-------------------------------------- Start Footer------------------------------ -->
