front page complete

--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
                 <div class="col-3">
                     <div class="ww-box">
                         <div class="img-box">
-                            <img src="image/ww-0-1.png" alt="">
+                            <img src="image/ww-1.png" alt="">
                         </div>
                         <div class="img-footer">
                             <p>Free Pick Up</p>
@@ -156,7 +156,7 @@
                 <div class="col-3">
                     <div class="ww-box">
                         <div class="img-box">
-                            <img src="image/ww-0-1 (1).png" alt="">
+                            <img src="image/ww-2.png" alt="">
                         </div>
                         <div class="img-footer">
                             <p>Digital Weight Scale</p>
@@ -166,7 +166,7 @@
                 <div class="col-3">
                     <div class="ww-box">
                         <div class="img-box">
-                            <img src="image/ww-0-1.png" alt="">
+                            <img src="image/ww-3.png" alt="">
                         </div>
                         <div class="img-footer">
                             <p>Multiple Payment Options</p>
@@ -176,7 +176,7 @@
                 <div class="col-3">
                     <div class="ww-box">
                         <div class="img-box">
-                            <img src="image/ww-0-1.png" alt="">
+                            <img src="image/ww-4.png" alt="">
                         </div>
                         <div class="img-footer">
                             <p>Contribution in Swatchh Bharat Abhiyan</p>
@@ -189,6 +189,54 @@
     <!-------------------------------------- End Why OmScrap?------------------------------ -->
 
     <!-------------------------------------- Start Footer------------------------------ -->
+    <section>
+        <footer id="footer-section">
+            <div class="footer-row">
+                <div class="footer-col">
+                    <h4>quick links</h4>
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">rate list</a></li>
+                        <li><a href="#">how we works</a></li>
+                        <li><a href="#">about us</a></li>
+                        <li><a href="#">request for pickup</a></li>
+                        <li><a href="#">rate list</a></li>
+
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <div class="footer-social-links">
+                        <h4>social links</h4>
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    </div>
+                </div>
+                <div class="footer-col">
+                    <h4>Company Info</h4>
+                    <div class="footer-address">
+                        <h6>address</h6>
+                        <p><i class="fa-regular fa-address-card"></i> rz c2/195 street no-5 <br>
+                        mahavir enclave part -1 <br>
+                        new delhi - 110045</p>
+                    </div>
+                    <div class="footer-phone">
+                        <h6>phone</h6>
+                        <a href="#"><i class="fa-solid fa-phone"></i>  +91-7210731073</a>
+                    </div>
+                </div>
+                <div class="footer-col hello">
+                    <div class="footer-logo">
+                        <img src="./image/logo.png" alt="">
+                    </div>
+                    <div class="footer-recycle">
+                        <img src="./image/recycle-earth.png"  alt="">
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
     <!-------------------------------------- End Footer------------------------------ -->
 
 
