--- a/home.html
+++ b/home.html
@@ -234,9 +234,14 @@
                         <img src="./image/recycle-earth.png"  alt="">
                     </div>
                 </div>
+                <div class="copy-right" style="width: 100%;">
+                    <p style="text-align: right; padding-right: 5px; width: 100%; color: #eee;">@ ajay kumar pal</p>
+                </div>
             </div>
+            
         </footer>
     </section>
+    
     <!-------------------------------------- End Footer------------------------------ -->
 
 
