--- a/Extra.html
+++ b/Extra.html
@@ -7,9 +7,30 @@
     <title>Extra-Om Scrap</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mystyle.css">
+    <script src="script.js" defer></script>
     
 <body>
+
+
+<section aria-label="Newest Photos">
+    <div class="corousel" data-carousel>
+        <button class="carousel-button prev" data-carousel-button="prev">&#8656;</button>
+        <button class="carousel-button next" data-carousel-button="next">&#8658;</button>
+        <ul data-slides>
+            <li class="slide" data-active>
+                <img src="./image/banner/banner-1058145_1280.jpg" alt="">
+            </li>
+            <li class="slide">
+                <img src="./image/banner/banner-1246873_1280.jpg" alt="">
+            </li>
+            <li class="slide">
+                <img src="./image/banner/dragon-1014565_1280.jpg" alt="">
+            </li>
+        </ul>
+    </div>
+</section>
+
     <!-------------------------------------- Start Request Section------------------------------ -->
     
     <!-------------------------------------- End Request Section------------------------------ -->
