--- a/home.html
+++ b/home.html
@@ -35,12 +35,13 @@
     <section>
         <div class="banner-container">
             <div class="banner-row">
+                
                 <div class="imageContainer slide">
                     <img src="./image/banner-1.jpg" alt="" srcset="">
                     <div class="image-text">this is 1st banner.</div>
                 </div>
                 <div class="imageContainer slide">
-                    <img src="./image/background.jpg" alt="" srcset="">
+                    <img src="./image/background3.jpg" alt="" srcset="">
                     <div class="image-text">this is 2nd banner.</div>
                 </div>
                 <div class="imageContainer slide">
