--- a/home.html
+++ b/home.html
@@ -223,6 +223,28 @@
     </section>
     <!-------------------------------------- End Why OmScrap?------------------------------ -->
 
+    <!-------------------------------------- Start Query------------------------------ -->
+    <section id="stil_query">
+        <div class="query_row">
+            <div class="left_img">
+                <img src="./image/query_recycle.png" alt="" srcset="">
+            </div>
+            <div class="center_div_query">
+                <div class="query_text">
+                    <h2>still have a query ?</h2>
+                </div>
+                <div class="query_phone">
+                    <h3>+91-7210731073</h3>
+                </div>
+            </div>
+            <div class="right_img">
+                <img src="./image/query_hero.png" alt="" srcset="">
+                
+            </div>
+        </div>
+    </section>
+    <!-------------------------------------- End Query------------------------------ -->
+
     <!-------------------------------------- Start Footer------------------------------ -->
     <section>
         <footer id="footer-section">
