--- a/home.html
+++ b/home.html
@@ -223,17 +223,25 @@
     </section>
     <!-------------------------------------- End Why OmScrap?------------------------------ -->
 
+
+
+
+
+
+
+
     <!-------------------------------------- Start Query------------------------------ -->
     <section id="stil_query">
         <div class="query_row">
             <div class="left_img">
                 <img src="./image/query_recycle.png" alt="" srcset="">
             </div>
-            <div class="center_div_query">
-                <div class="query_text">
-                    <h2>still have a query ?</h2>
+            <div class="center_query">
+                <div class="query_text" >
+                    <h2>Still have a Query ?</h2>
                 </div>
                 <div class="query_phone">
+                    <span>&#10149;</span>
                     <h3>+91-7210731073</h3>
                 </div>
             </div>
@@ -244,6 +252,15 @@
         </div>
     </section>
     <!-------------------------------------- End Query------------------------------ -->
+
+
+
+
+
+
+
+
+
 
     <!-------------------------------------- Start Footer------------------------------ -->
     <section>
