rate list update

--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
         <nav>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="#rate_list">Rate List</a></li>
-                <li><a href="#pickup_request">Pickup Request</a></li>
+                <li><a href="ratecard.html">Rate List</a></li>
+                <li><a href="./home.html#pickup_request">Pickup Request</a></li>
                 <li><a href="#aboutus">About Us</a></li>
                 <li><a href="#contactus">Contant Us</a></li>
                 <li><a href="#"><i class="fa-solid fa-phone">&nbsp;+91-7210731073</i></a></li>
@@ -137,23 +137,23 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-3 hover-box">
+                <div id="chngBoxRadius" class="col-3 hover-box">
                     <div class="hww-box">
-                        <img src="image/hww-1.png" alt="">
+                        <img class="chngImgRadius" src="image/hww-1.png" alt="">
                         <h4>Book a Pickup</h4>
                         <p>From our Website.</p>
                     </div>
                 </div>
                 <div class="col-3 hover-box">
                     <div class="hww-box">
-                        <img src="image/hww-2.png" alt="">
+                        <img class="chngImgRadius" src="image/hww-2.png" alt="" >
                         <h4>Visit & Inspection</h4>
                         <p>Executive will reach at your doorstep on date and time designated by you.</p>
                     </div>
                 </div>
                 <div class="col-3 hover-box">
                     <div class="hww-box">
-                        <img src="image/hww-3.png" alt="">
+                        <img class="chngImgRadius" src="image/hww-3.png" alt="" >
                         <h4>Get Money</h4>
                         <p>Get paid with multiple payment.</p>
                     </div>
@@ -241,8 +241,8 @@
                     <h2>Still have a Query ?</h2>
                 </div>
                 <div class="query_phone">
-                    <span>&#10149;</span>
-                    <h3>+91-7210731073</h3>
+                    <img src="./image/hand50pxwhite.png" alt="">
+                    <h3> +91-7210731073</h3>
                 </div>
             </div>
             <div class="right_img">
