--- a/ratecard.html
+++ b/ratecard.html
@@ -19,7 +19,7 @@
         </a>
         <nav>
             <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a class="active" href="./home.html">Home</a></li>
                 <li><a href="ratecard.html">Rate List</a></li>
                 <li><a href="./home.html#pickup_request">Pickup Request</a></li>
                 <li><a href="#aboutus">About Us</a></li>
@@ -318,7 +318,9 @@
     <!-------------------------------------- End Footer------------------------------ -->
 
 
-
+    <div class="whatsappIcon">
+        <a href="https://wa.me/917210731073" target="_blank"><i class="fa-brands fa-square-whatsapp"></i></i></a>
+    </div>
 
 
 
