working on admin panel

--- a/home.html
+++ b/home.html
@@ -241,6 +241,7 @@
                         <li><a href="#">about us</a></li>
                         <li><a href="#">request for pickup</a></li>
                         <li><a href="#">rate list</a></li>
+                        <li><a href="./adminPanel.html">admin login</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
