--- a/ratecard.html
+++ b/ratecard.html
@@ -44,6 +44,9 @@
             <div class="rateList_heading">
                 rate list
             </div>
+            <div class="category_heading">
+                Iron items
+            </div>
             <!--start rate all list full list -->
             <div class="scrapList_container">
                 <!-- ******start scrap item box---------------***** -->
