--- a/extra.html
+++ b/extra.html
@@ -11,15 +11,37 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./image/favicon.png">
     <style>
-        * {
-            box-sizing: border-box;
-        }
-        body {
-            background-color: rgb(11, 32, 65);
-            /* border: 1px solid black; */
-        }
+        fieldset {
+
+  background-color: #eeeeee;
+}
+
+legend {
+    
+  background-color: gray;
+  color: white;
+  padding: 5px 10px;
+}
+
+input {
+  margin: 5px;
+}
     </style>
 <body>
+    <form action="/action_page.php">
+        <fieldset>
+         <legend>Personalia:</legend>
+         <label for="fname">First name:</label>
+         <input type="text" id="fname" name="fname"><br><br>
+         <label for="lname">Last name:</label>
+         <input type="text" id="lname" name="lname"><br><br>
+         <label for="email">Email:</label>
+         <input type="email" id="email" name="email"><br><br>
+         <label for="birthday">Birthday:</label>
+         <input type="date" id="birthday" name="birthday"><br><br>
+         <input type="submit" value="Submit">
+        </fieldset>
+       </form>
         <!-- ---------------------------------------- -->
     <script src="script.js"></script>
 </body>
